# OpenTelemetry-Multi-Source-Correlation-Engine

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: e2e.yml  property.yml  reproduce.yml  snapshot.yml  unit.yml
compose/: docker-compose.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus-config.yaml  tempo-config.yaml
compose/grafana/dashboards/: default.json  eval.json
compose/grafana/provisioning/dashboards/: dashboards.yaml
compose/grafana/provisioning/datasources/: datasources.yaml
compose/toxiproxy/: proxies.json
configs/: anomaly_invocation.toml  coverage_targets.toml  scoring.toml  sweep.example.toml
crates/bank-common/: Cargo.toml
crates/bank-common/src/: errors.rs  failure_modes.rs  health.rs  lib.rs  metrics.rs  otel.rs
crates/bank-common/tests/: failure_modes.rs  health.rs  otel.rs
crates/bank-loadgen/: Cargo.toml
crates/bank-loadgen/src/: lib.rs  main.rs  profile.rs  runner.rs  stats.rs
crates/bank-loadgen/tests/: runner.rs
crates/chaos/: Cargo.toml
crates/chaos/src/: driver.rs  lib.rs  mock.rs  pumba.rs  toxiproxy.rs
crates/correlation-cli/: Cargo.toml
crates/correlation-cli/src/: main.rs
crates/correlation-cli/tests/: render.rs
crates/correlation-cli/tests/snapshots/: render__render_minimal_incident.snap
crates/correlation-core/: Cargo.toml  README.md
crates/correlation-core/src/: backend.rs  backend_mock.rs  backend_multi.rs  config.rs  engine.rs  lib.rs  time.rs
crates/correlation-core/src/anomaly/: ewma.rs  mod.rs  zscore.rs
crates/correlation-core/src/graph/: builder.rs  edges.rs  invariants.rs  mod.rs  nodes.rs
crates/correlation-core/src/ranking/: mod.rs  propagation.rs  scoring.rs
crates/correlation-core/src/schema/: mod.rs  renderer_md.rs  version.rs
crates/correlation-core/tests/: anomaly_ewma.rs  anomaly_zscore.rs  edge_cases.rs  engine_anomaly.rs  engine_trace.rs  graph_basic.rs  graph_invariants.rs  properties.rs  ranking.rs  scenarios_snapshot.rs  schema_md.rs  schema_roundtrip.rs
crates/correlation-core/tests/fixtures/: incident_minimal.json
crates/correlation-core/tests/fixtures/edge_cases/zero_variance/: prom.json
crates/correlation-core/tests/fixtures/scenarios/anomaly_spike/: prom.json  tempo.json
crates/correlation-core/tests/fixtures/scenarios/minimal/: tempo.json
crates/correlation-core/tests/fixtures/scenarios/payment_storm_synthetic/: tempo.json
crates/correlation-core/tests/snapshots/: scenarios_snapshot__payment_storm_fixture_snapshot.snap  schema_md__renders_minimal_incident_to_markdown.snap
crates/correlation-http/: Cargo.toml  Dockerfile
crates/correlation-http/src/: main.rs
crates/correlation-loki/: Cargo.toml
crates/correlation-loki/src/: lib.rs
crates/correlation-loki/tests/: errors.rs
crates/correlation-prom/: Cargo.toml
crates/correlation-prom/src/: lib.rs
crates/correlation-prom/tests/: errors.rs
crates/correlation-tempo/: Cargo.toml
crates/correlation-tempo/src/: lib.rs
crates/correlation-tempo/tests/: errors.rs
crates/eval-harness/: Cargo.toml  Dockerfile  README.md
crates/eval-harness/migrations_eval/: 0001_init.sql  0002_add_config_json.sql
crates/eval-harness/migrations_incidents/: 0001_init.sql
crates/eval-harness/src/: canary.rs  coverage.rs  db.rs  lib.rs  main.rs  report.rs  runner.rs  scoring.rs  sweep.rs
crates/experiment-runner/: Cargo.toml  Dockerfile
crates/experiment-runner/migrations/: 0001_init.sql
crates/experiment-runner/src/: db.rs  lib.rs  main.rs  recovery.rs  runner.rs  spec.rs
crates/experiment-runner/tests/: recovery.rs
crates/services/accounts/: Cargo.toml  Dockerfile
crates/services/accounts/migrations/: 0001_init.sql
crates/services/accounts/src/: main.rs  repo.rs  routes.rs
crates/services/accounts/tests/: routes.rs
crates/services/auth/: Cargo.toml  Dockerfile
crates/services/auth/src/: main.rs
crates/services/auth/src/routes/: login.rs  mod.rs  verify.rs
crates/services/auth/tests/: routes.rs
crates/services/notifications/: Cargo.toml  Dockerfile
crates/services/notifications/src/: main.rs  routes.rs
crates/services/transactions/: Cargo.toml  Dockerfile
crates/services/transactions/src/: clients.rs  lib.rs  main.rs  routes.rs
docs/: demo-walkthrough.md  design-spec.md  implementation-plan.md  operations.md  philosophy.md  sample-corr-explain.md  sample-incident.json
docs/operations/: branch-protection.md
docs/superpowers/plans/: 2026-05-23-otel-correlation-engine.md  2026-05-23-swarm-orchestration.md
docs/superpowers/specs/: 2026-05-23-otel-correlation-engine-design.md
docs/superpowers/swarm/: escalations.md  quarantine.md
docs/superpowers/swarm/prompts/: architect.md  reviewer.md  sentinel.md  worker.md
experiments/: accounts-db-down-001.yaml  auth-cold-start-001.yaml  auth-restart-loop-001.yaml  combined-cascade-001.yaml  db-connpool-exhaust-001.yaml  inter-service-partition-001.yaml  notifications-oom-001.yaml  payment-storm-001.yaml  transactions-cpu-001.yaml  transactions-error-spike-001.yaml
scripts/: demo.sh  eval_exporter.py  eval_scorecard.py
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: engine_real_backends.rs  one_experiment_full_loop.rs  smoke.rs
