[workspace]
resolver = "2"
members = [
    "crates/bank-common",
    "crates/correlation-core",
    "crates/correlation-tempo",
    "crates/correlation-loki",
    "crates/correlation-prom",
    "crates/correlation-cli",
    "crates/correlation-http",
    "crates/bank-loadgen",
    "crates/chaos",
    "crates/experiment-runner",
    "crates/eval-harness",
    "crates/services/auth",
    "crates/services/accounts",
    "crates/services/transactions",
    "crates/services/notifications",
    "tests/e2e",
]

[workspace.package]
edition      = "2021"
rust-version = "1.88"
license      = "MIT"

[workspace.dependencies]
tokio                 = { version = "1", features = ["full"] }
axum                  = "0.7"
reqwest               = { version = "0.12", features = ["json", "rustls-tls"] }
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
opentelemetry         = "0.32"
opentelemetry_sdk     = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.32", features = ["grpc-tonic"] }
tracing               = "0.1"
tracing-subscriber    = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.33"
sqlx                  = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }
async-trait           = "0.1"
thiserror             = "1"
anyhow                = "1"
uuid                  = { version = "1", features = ["v7", "serde"] }
indexmap              = { version = "~2.6", features = ["serde"] }
prometheus            = "0.13"
toml                  = "0.8"
chrono                = { version = "0.4", features = ["serde"] }
jsonwebtoken          = "9"
# Dev-deps live in [workspace.dependencies]; members consume via
# `[dev-dependencies]` table with `workspace = true`. Cargo has no
# `[workspace.dev-dependencies]` table — that's an invalid key.
insta                 = { version = "1", features = ["json", "yaml"] }
proptest              = "1"
wiremock              = "0.6"
testcontainers        = "0.21"
