[package]
name = "bank-loadgen"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "bank-loadgen"
path = "src/main.rs"

[dependencies]
bank-common = { path = "../bank-common" }
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_yaml  = "0.9"
serde_json  = { workspace = true }
clap        = { version = "4", features = ["derive"] }
anyhow      = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
rand        = "0.8"

[dev-dependencies]
wiremock    = { workspace = true }
