[package]
name = "chaos"
version = "0.1.0"
edition.workspace = true

[features]
test-helpers = []

[dependencies]
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
