[package]
name = "correlation-core"
version = "0.1.0"
edition.workspace = true

[features]
test-helpers = []

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
uuid        = { workspace = true }
indexmap    = { workspace = true }
chrono      = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
insta       = { workspace = true }
proptest    = { workspace = true }
