[package]
name = "correlation-core"
version = "0.1.0"
edition.workspace = true

[features]
test-helpers = []

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
uuid        = { workspace = true }
indexmap    = { workspace = true }
chrono      = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
# Self dev-dependency with `test-helpers` enabled: integration tests in `tests/`
# compile against this crate as an external dependency and otherwise would not
# see the feature-gated `backend_mock` module. This is the canonical cargo idiom
# for exposing a test-only feature to a crate's own integration tests.
correlation-core = { path = ".", features = ["test-helpers"] }
insta       = { workspace = true }
proptest    = { workspace = true }
rand        = "0.8"
