[package]
name = "correlation-http"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "corr-http"
path = "src/main.rs"

[dependencies]
correlation-core  = { path = "../correlation-core" }
correlation-tempo = { path = "../correlation-tempo" }
correlation-loki  = { path = "../correlation-loki" }
correlation-prom  = { path = "../correlation-prom" }
tokio       = { workspace = true }
axum        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
