[package]
name = "correlation-loki"
version = "0.1.0"
edition.workspace = true

[dependencies]
correlation-core = { path = "../correlation-core" }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
tokio        = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
wiremock     = { workspace = true }
