[package]
name = "accounts"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "accounts"
path = "src/main.rs"

[dependencies]
bank-common = { path = "../../bank-common" }
tokio       = { workspace = true }
axum        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
testcontainers = "0.21"
once_cell      = "1"
tower          = "0.5"
